| Bug #46495 | Crash in reload_acl_and_cache on SIGHUP | ||
|---|---|---|---|
| Submitted: | 31 Jul 2009 13:50 | Modified: | 7 Mar 2010 2:03 |
| Reporter: | Philip Stoev | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S1 (Critical) |
| Version: | 5.4,6.0 | OS: | Any |
| Assigned to: | Magne Mæhre | CPU Architecture: | Any |
| Tags: | regression | ||
[31 Jul 2009 13:50]
Philip Stoev
[31 Jul 2009 16:19]
Shane Bester
I hit similar bugs already: bug #35591 (FLUSH PRIVILEGES caused a crash) bug #35589 (SET PASSWORD caused a crash) bug #33982 (debug assertion and crash reloading grant tables after sighup or kill)
[19 Aug 2009 13:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/81075 2868 Magne Mahre 2009-08-19 Bug #46495 Crash in reload_acl_and_cache on SIGHUP An assert in reload_acl_and_cache didn't account for the case when the function is called with a NULL thd. A null thd is used whenever the function is called from the SIGHUP signal handler.
[20 Aug 2009 12:04]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/81163 2871 Magne Mahre 2009-08-20 Bug #46495 Crash in reload_acl_and_cache on SIGHUP An assert in reload_acl_and_cache didn't account for the case when the function is called with a NULL thd. A null thd is used whenever the function is called from the SIGHUP signal handler.
[20 Aug 2009 12:08]
Magne Mæhre
Pushed to mysql-next-bugfixing (5.4.4)
[24 Aug 2009 13:53]
Bugs System
Pushed into 5.4.4-alpha (revid:alik@sun.com-20090824135126-2rngffvth14a8bpj) (version source revid:magne.mahre@sun.com-20090820120337-u4dqbuwjblukyy71) (merge vers: 5.4.4-alpha) (pib:11)
[26 Aug 2009 2:12]
Paul DuBois
Noted in 5.4.4 changelog. The server could crash attempting to flush privileges after receipt of a SIGHUP signal.
[10 Dec 2009 9:30]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/93459 3022 Magne Mahre 2009-12-10 Bug #46495 Crash in reload_acl_and_cache on SIGHUP An assert in reload_acl_and_cache didn't account for the case when the function is called with a NULL thd. A null thd is used whenever the function is called from the SIGHUP signal handler. Backported from 6.0-codebase (revid: 2617.69.35)
[10 Dec 2009 9:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/93460 3020 Magne Mahre 2009-12-10 Bug #46495 Crash in reload_acl_and_cache on SIGHUP An assert in reload_acl_and_cache didn't account for the case when the function is called with a NULL thd. A null thd is used whenever the function is called from the SIGHUP signal handler. Backported from 6.0-codebase (revid: 2617.69.35)
[16 Feb 2010 16:47]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100216101445-2ofzkh48aq2e0e8o) (version source revid:kostja@sun.com-20091211154405-c9yhiewr9o5d20rq) (merge vers: 6.0.14-alpha) (pib:16)
[16 Feb 2010 16:56]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100216101208-33qkfwdr0tep3pf2) (version source revid:magne.mahre@sun.com-20091210093223-luri8232h0drca6z) (pib:16)
[17 Feb 2010 0:52]
Paul DuBois
Noted in 6.0.14 changelog. Setting report to Need Merge pending push of Celosia into release tree.
[6 Mar 2010 10:57]
Bugs System
Pushed into 5.5.3-m3 (revid:alik@sun.com-20100306103849-hha31z2enhh7jwt3) (version source revid:vvaintroub@mysql.com-20100216221947-luyhph0txl2c5tc8) (merge vers: 5.5.99-m3) (pib:16)
[7 Mar 2010 2:03]
Paul DuBois
Noted in 5.5.3 changelog.
