Bug #46495        Crash in reload_acl_and_cache on SIGHUP

An assert in reload_acl_and_cache didn't account for the
case when the function is called with a NULL thd.  A
null thd is used whenever the function is called from the
SIGHUP signal handler.

Backported from 6.0-codebase  (revid: 2617.69.35)